Fix double spacing bug on homepage

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -354,7 +354,7 @@ article.large {
 
 .logo-section {
   text-align:center;
-  margin-top:2rem;
+  margin-top:1rem;
   // padding:1.25rem;
 
   .row {
